--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,6 @@ log_parallelism = []
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--document-private-items"]
+
+[profile.release]
+panic = "abort"
