Don't run slow 10k-ballot input with Droop.py.

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -121,6 +121,8 @@ jobs:
           - true
         include:
           - droop: true
+          - file: random/rand_hypergeometric_10k
+            droop: false
           - file: random/rand_hypergeometric_100k
             droop: false
       fail-fast: false
