--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ categories = ["voting"]
 keywords = ["voting", "election", "stv", "meek"]
 exclude = ["man/*", "testdata/*", "tools/*", ".github/*"]
 edition = "2021"
+rust-version = "1.64.0"
 
 [dependencies]
 clap = { version = "=4.1", features = ["derive"] }
