--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -161,6 +161,37 @@ jobs:
           python3 droop/Droop.py meek fixed precision=9 omega=6 defeat_batch=none testdata/ballots/${{ matrix.file }}.blt 2> droop.err | diff -s testdata/meek/${{ matrix.file }}.fixed9.log -
           echo -n "" | diff -s - droop.err
 
+  meek_approx_tests:
+    needs: build
+    strategy:
+      matrix:
+        file:
+          - crashes/elect_too_many
+          - random/rand_2x10
+          - random/rand_5x4
+          - random/rand_hypergeometric
+          - vegetables
+        parallel:
+          - false
+          - true
+      fail-fast: false
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: target/release/
+      - name: Prepare STV-rs binary
+        run: chmod +x target/release/stv-rs
+
+      - name: Check STV-rs output
+        run: |
+          target/release/stv-rs --arithmetic approx --input testdata/ballots/${{ matrix.file }}.blt meek --parallel=${{ matrix.parallel }} | diff -s testdata/meek/${{ matrix.file }}.approx.log -
+      - name: Check STV-rs output (equalized counting)
+        run: |
+          target/release/stv-rs --arithmetic approx --input testdata/ballots/${{ matrix.file }}.blt meek --parallel=${{ matrix.parallel }} --equalize | diff -s testdata/meek/${{ matrix.file }}.equalize.approx.log -
+
   plurality_tests:
     needs: build
     strategy:
@@ -426,33 +457,6 @@ jobs:
       - name: Check STV-rs output (equalized counting)
         run: |
           target/release/stv-rs --arithmetic fixed9 --input testdata/ballots/${{ matrix.file }}.blt meek --parallel=${{ matrix.parallel }} --force-positive-surplus --equalize | diff -s testdata/meek/${{ matrix.file }}.equalize.fixed9.log -
-
-  crash_approx_tests:
-    needs: build
-    strategy:
-      matrix:
-        file:
-          - crashes/elect_too_many
-        parallel:
-          - false
-          - true
-      fail-fast: false
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: build-artifacts
-          path: target/release/
-      - name: Prepare STV-rs binary
-        run: chmod +x target/release/stv-rs
-
-      - name: Check STV-rs output
-        run: |
-          target/release/stv-rs --arithmetic approx --input testdata/ballots/${{ matrix.file }}.blt meek --parallel=${{ matrix.parallel }} | diff -s testdata/meek/${{ matrix.file }}.approx.log -
-      - name: Check STV-rs output (equalized counting)
-        run: |
-          target/release/stv-rs --arithmetic approx --input testdata/ballots/${{ matrix.file }}.blt meek --parallel=${{ matrix.parallel }} --equalize | diff -s testdata/meek/${{ matrix.file }}.equalize.approx.log -
 
   crash_droop_tests:
     strategy:
