--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -24,7 +24,7 @@ jobs:
             cargo-registry
 
       - name: Check Cargo version
-        run: cargo -V > cargo.version.txt
+        run: cargo -V | tee cargo.version.txt
       - name: Cache Cargo target
         uses: actions/cache@v3
         with:
