--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
             cargo-registry
 
       - name: Check Cargo version
-        run: cargo -V > cargo.version.txt
+        run: cargo -V | tee cargo.version.txt
       - name: Cache Cargo target
         uses: actions/cache@v3
         with:
@@ -33,10 +33,10 @@ jobs:
             cargo-target-release-${{ hashFiles('cargo.version.txt') }}
 
       - name: Tests without features
-        run: cargo test --release --all --no-default-features --verbose
+        run: cargo test --verbose --release --all --no-default-features
       - name: Tests examples without features
-        run: cargo test --release --examples --no-default-features --verbose
+        run: cargo test --verbose --release --examples --no-default-features
       - name: Tests with default features
-        run: cargo test --release --all --verbose
+        run: cargo test --verbose --release --all
       - name: Tests examples with default features
-        run: cargo test --release --examples --verbose
+        run: cargo test --verbose --release --examples
